y.output
Terminals unused in grammar

   VRAI
   FAUX
   SINON
   POUR
   CSTE_REEL
   CSTE_CHAINE
   CSTE_CHAR
   ACCOLADE_FERMANTE
   ACCOLADE_OUVRANT


Rules useless in parser due to conflicts

   85 variable: IDF


State 17 conflicts: 2 reduce/reduce
State 70 conflicts: 9 reduce/reduce
State 81 conflicts: 10 reduce/reduce
State 119 conflicts: 11 reduce/reduce
State 124 conflicts: 2 shift/reduce
State 125 conflicts: 2 shift/reduce


Grammar

    0 $accept: programme $end

    1 programme: PROG corps

    2 corps: liste_declarations liste_instructions
    3      | liste_instructions

    4 liste_declarations: declaration POINT_VIRGULE
    5                   | liste_declarations declaration POINT_VIRGULE

    6 declaration: declaration_type
    7            | declaration_variable
    8            | declaration_procedure
    9            | declaration_fonction

   10 declaration_type: TYPE IDF DEUX_POINTS suite_declaration_type

   11 suite_declaration_type: STRUCT liste_champs FSTRUCT
   12                       | TABLEAU dimension DE nom_type

   13 dimension: CROCHET_OUVRANT liste_dimensions CROCHET_FERMANT

   14 liste_dimensions: une_dimension
   15                 | liste_dimensions VIRGULE une_dimension

   16 une_dimension: expression POINT_POINT expression

   17 declaration_variable: VARIABLE IDF DEUX_POINTS nom_type

   18 declaration_procedure: PROCEDURE IDF liste_parametres corps

   19 declaration_fonction: FONCTION IDF liste_parametres RETOURNE type_simple corps

   20 liste_instructions: DEBUT suite_liste_inst FIN

   21 suite_liste_inst: instruction POINT_VIRGULE
   22                 | suite_liste_inst instruction POINT_VIRGULE

   23 instruction: affectation
   24            | condition
   25            | tant_que
   26            | appel
   27            | VIDE
   28            | RETOURNE resultat_retourne
   29            | lecture
   30            | ecriture

   31 liste_champs: un_champ
   32             | liste_champs POINT_VIRGULE un_champ

   33 un_champ: IDF DEUX_POINTS nom_type

   34 nom_type: type_simple
   35         | IDF

   36 type_simple: ENTIER
   37            | REEL
   38            | BOOLEEN
   39            | CARACTERE
   40            | CHAINE CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT

   41 liste_parametres: %empty
   42                 | PARENTHESE_OUVRANTE liste_param PARENTHESE_FERMANTE

   43 liste_param: un_param
   44            | liste_param POINT_VIRGULE un_param

   45 un_param: IDF DEUX_POINTS type_simple

   46 resultat_retourne: PARENTHESE_OUVRANTE expression PARENTHESE_FERMANTE

   47 appel: IDF liste_arguments

   48 liste_arguments: %empty
   49                | PARENTHESE_OUVRANTE liste_args PARENTHESE_FERMANTE

   50 liste_args: un_arg
   51           | liste_args VIRGULE un_arg

   52 un_arg: expression

   53 condition: SI PARENTHESE_OUVRANTE expression_booleenne PARENTHESE_FERMANTE ALORS liste_instructions

   54 tant_que: TANT_QUE expression_booleenne FAIRE liste_instructions

   55 affectation: variable OPAFF expression_arithmetique

   56 variable: IDF
   57         | IDF suite_crochet

   58 suite_crochet: CROCHET_OUVRANT expression_arithmetique CROCHET_FERMANT
   59              | CROCHET_OUVRANT expression_arithmetique CROCHET_FERMANT suite_crochet

   60 expression: expression_arithmetique
   61           | expression_booleenne

   62 expression_arithmetique: expression_arithmetique PLUS expression_arithmetique2
   63                        | expression_arithmetique MOINS expression_arithmetique2
   64                        | expression_arithmetique2

   65 expression_arithmetique2: expression_arithmetique2 MULT expression_arithmetique3
   66                         | expression_arithmetique2 DIV expression_arithmetique3
   67                         | expression_arithmetique3

   68 expression_arithmetique3: PARENTHESE_OUVRANTE expression_arithmetique PARENTHESE_FERMANTE
   69                         | CSTE_ENTIERE
   70                         | variable

   71 expression_booleenne: nom_type opbool nom_type
   72                     | expression_booleenne AND expression_booleenne
   73                     | expression_booleenne OR expression_booleenne

   74 opbool: EGALE
   75       | DIFF
   76       | SUP
   77       | SUPE
   78       | INF
   79       | INFE

   80 lecture: LIRE PARENTHESE_OUVRANTE liste_variables PARENTHESE_FERMANTE

   81 ecriture: ECRIRE PARENTHESE_OUVRANTE format suite_ecriture PARENTHESE_FERMANTE

   82 liste_variables: variable
   83                | liste_variables VIRGULE variable

   84 format: %empty

   85 variable: IDF
   86         | tableau
   87         | variable POINT tableau
   88         | variable POINT IDF

   89 tableau: IDF CROCHET_OUVRANT expression_arithmetique CROCHET_FERMANT

   90 suite_ecriture: %empty
   91               | VIRGULE variable suite_ecriture


Terminals, with rules where they appear

$end (0) 0
error (256)
ENTIER (258) 36
REEL (259) 37
BOOLEEN (260) 38
CARACTERE (261) 39
CHAINE (262) 40
IDF (263) 10 17 18 19 33 35 45 47 56 57 85 88 89
INF (264) 78
INFE (265) 79
SUPE (266) 77
SUP (267) 76
DIFF (268) 75
EGALE (269) 74
AND (270) 72
OR (271) 73
VRAI (272)
FAUX (273)
PROG (274) 1
DEBUT (275) 20
FIN (276) 20
POINT_VIRGULE (277) 4 5 21 22 32 44
DEUX_POINTS (278) 10 17 33 45
POINT_POINT (279) 16
VIRGULE (280) 15 51 83 91
POINT (281) 87 88
TYPE (282) 10
VARIABLE (283) 17
PROCEDURE (284) 18
FONCTION (285) 19
STRUCT (286) 11
FSTRUCT (287) 11
TABLEAU (288) 12
DE (289) 12
RETOURNE (290) 19 28
SI (291) 53
ALORS (292) 53
SINON (293)
TANT_QUE (294) 54
FAIRE (295) 54
POUR (296)
CSTE_ENTIERE (297) 40 69
CSTE_REEL (298)
CSTE_CHAINE (299)
CSTE_CHAR (300)
VIDE (301) 27
ACCOLADE_FERMANTE (302)
ACCOLADE_OUVRANT (303)
PARENTHESE_FERMANTE (304) 42 46 49 53 68 80 81
PARENTHESE_OUVRANTE (305) 42 46 49 53 68 80 81
CROCHET_OUVRANT (306) 13 40 58 59 89
CROCHET_FERMANT (307) 13 40 58 59 89
PLUS (308) 62
MOINS (309) 63
MULT (310) 65
DIV (311) 66
OPAFF (312) 55
LIRE (313) 80
ECRIRE (314) 81


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
programme (61)
    on left: 1, on right: 0
corps (62)
    on left: 2 3, on right: 1 18 19
liste_declarations (63)
    on left: 4 5, on right: 2 5
declaration (64)
    on left: 6 7 8 9, on right: 4 5
declaration_type (65)
    on left: 10, on right: 6
suite_declaration_type (66)
    on left: 11 12, on right: 10
dimension (67)
    on left: 13, on right: 12
liste_dimensions (68)
    on left: 14 15, on right: 13 15
une_dimension (69)
    on left: 16, on right: 14 15
declaration_variable (70)
    on left: 17, on right: 7
declaration_procedure (71)
    on left: 18, on right: 8
declaration_fonction (72)
    on left: 19, on right: 9
liste_instructions (73)
    on left: 20, on right: 2 3 53 54
suite_liste_inst (74)
    on left: 21 22, on right: 20 22
instruction (75)
    on left: 23 24 25 26 27 28 29 30, on right: 21 22
liste_champs (76)
    on left: 31 32, on right: 11 32
un_champ (77)
    on left: 33, on right: 31 32
nom_type (78)
    on left: 34 35, on right: 12 17 33 71
type_simple (79)
    on left: 36 37 38 39 40, on right: 19 34 45
liste_parametres (80)
    on left: 41 42, on right: 18 19
liste_param (81)
    on left: 43 44, on right: 42 44
un_param (82)
    on left: 45, on right: 43 44
resultat_retourne (83)
    on left: 46, on right: 28
appel (84)
    on left: 47, on right: 26
liste_arguments (85)
    on left: 48 49, on right: 47
liste_args (86)
    on left: 50 51, on right: 49 51
un_arg (87)
    on left: 52, on right: 50 51
condition (88)
    on left: 53, on right: 24
tant_que (89)
    on left: 54, on right: 25
affectation (90)
    on left: 55, on right: 23
variable (91)
    on left: 56 57 85 86 87 88, on right: 55 70 82 83 87 88 91
suite_crochet (92)
    on left: 58 59, on right: 57 59
expression (93)
    on left: 60 61, on right: 16 46 52
expression_arithmetique (94)
    on left: 62 63 64, on right: 55 58 59 60 62 63 68 89
expression_arithmetique2 (95)
    on left: 65 66 67, on right: 62 63 64 65 66
expression_arithmetique3 (96)
    on left: 68 69 70, on right: 65 66 67
expression_booleenne (97)
    on left: 71 72 73, on right: 53 54 61 72 73
opbool (98)
    on left: 74 75 76 77 78 79, on right: 71
lecture (99)
    on left: 80, on right: 29
ecriture (100)
    on left: 81, on right: 30
liste_variables (101)
    on left: 82 83, on right: 80 83
format (102)
    on left: 84, on right: 81
tableau (103)
    on left: 89, on right: 86 87
suite_ecriture (104)
    on left: 90 91, on right: 81 91


State 0

    0 $accept: . programme $end

    PROG  shift, and go to state 1

    programme  go to state 2


State 1

    1 programme: PROG . corps

    DEBUT      shift, and go to state 3
    TYPE       shift, and go to state 4
    VARIABLE   shift, and go to state 5
    PROCEDURE  shift, and go to state 6
    FONCTION   shift, and go to state 7

    corps                  go to state 8
    liste_declarations     go to state 9
    declaration            go to state 10
    declaration_type       go to state 11
    declaration_variable   go to state 12
    declaration_procedure  go to state 13
    declaration_fonction   go to state 14
    liste_instructions     go to state 15


State 2

    0 $accept: programme . $end

    $end  shift, and go to state 16


State 3

   20 liste_instructions: DEBUT . suite_liste_inst FIN

    IDF       shift, and go to state 17
    RETOURNE  shift, and go to state 18
    SI        shift, and go to state 19
    TANT_QUE  shift, and go to state 20
    VIDE      shift, and go to state 21
    LIRE      shift, and go to state 22
    ECRIRE    shift, and go to state 23

    suite_liste_inst  go to state 24
    instruction       go to state 25
    appel             go to state 26
    condition         go to state 27
    tant_que          go to state 28
    affectation       go to state 29
    variable          go to state 30
    lecture           go to state 31
    ecriture          go to state 32
    tableau           go to state 33


State 4

   10 declaration_type: TYPE . IDF DEUX_POINTS suite_declaration_type

    IDF  shift, and go to state 34


State 5

   17 declaration_variable: VARIABLE . IDF DEUX_POINTS nom_type

    IDF  shift, and go to state 35


State 6

   18 declaration_procedure: PROCEDURE . IDF liste_parametres corps

    IDF  shift, and go to state 36


State 7

   19 declaration_fonction: FONCTION . IDF liste_parametres RETOURNE type_simple corps

    IDF  shift, and go to state 37


State 8

    1 programme: PROG corps .

    $default  reduce using rule 1 (programme)


State 9

    2 corps: liste_declarations . liste_instructions
    5 liste_declarations: liste_declarations . declaration POINT_VIRGULE

    DEBUT      shift, and go to state 3
    TYPE       shift, and go to state 4
    VARIABLE   shift, and go to state 5
    PROCEDURE  shift, and go to state 6
    FONCTION   shift, and go to state 7

    declaration            go to state 38
    declaration_type       go to state 11
    declaration_variable   go to state 12
    declaration_procedure  go to state 13
    declaration_fonction   go to state 14
    liste_instructions     go to state 39


State 10

    4 liste_declarations: declaration . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 40


State 11

    6 declaration: declaration_type .

    $default  reduce using rule 6 (declaration)


State 12

    7 declaration: declaration_variable .

    $default  reduce using rule 7 (declaration)


State 13

    8 declaration: declaration_procedure .

    $default  reduce using rule 8 (declaration)


State 14

    9 declaration: declaration_fonction .

    $default  reduce using rule 9 (declaration)


State 15

    3 corps: liste_instructions .

    $default  reduce using rule 3 (corps)


State 16

    0 $accept: programme $end .

    $default  accept


State 17

   47 appel: IDF . liste_arguments
   56 variable: IDF .
   57         | IDF . suite_crochet
   85         | IDF .
   89 tableau: IDF . CROCHET_OUVRANT expression_arithmetique CROCHET_FERMANT

    PARENTHESE_OUVRANTE  shift, and go to state 41
    CROCHET_OUVRANT      shift, and go to state 42

    POINT_VIRGULE  reduce using rule 48 (liste_arguments)
    POINT          reduce using rule 56 (variable)
    POINT          [reduce using rule 85 (variable)]
    OPAFF          reduce using rule 56 (variable)
    OPAFF          [reduce using rule 85 (variable)]
    $default       reduce using rule 56 (variable)

    liste_arguments  go to state 43
    suite_crochet    go to state 44


State 18

   28 instruction: RETOURNE . resultat_retourne

    PARENTHESE_OUVRANTE  shift, and go to state 45

    resultat_retourne  go to state 46


State 19

   53 condition: SI . PARENTHESE_OUVRANTE expression_booleenne PARENTHESE_FERMANTE ALORS liste_instructions

    PARENTHESE_OUVRANTE  shift, and go to state 47


State 20

   54 tant_que: TANT_QUE . expression_booleenne FAIRE liste_instructions

    ENTIER     shift, and go to state 48
    REEL       shift, and go to state 49
    BOOLEEN    shift, and go to state 50
    CARACTERE  shift, and go to state 51
    CHAINE     shift, and go to state 52
    IDF        shift, and go to state 53

    nom_type              go to state 54
    type_simple           go to state 55
    expression_booleenne  go to state 56


State 21

   27 instruction: VIDE .

    $default  reduce using rule 27 (instruction)


State 22

   80 lecture: LIRE . PARENTHESE_OUVRANTE liste_variables PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 57


State 23

   81 ecriture: ECRIRE . PARENTHESE_OUVRANTE format suite_ecriture PARENTHESE_FERMANTE

    PARENTHESE_OUVRANTE  shift, and go to state 58


State 24

   20 liste_instructions: DEBUT suite_liste_inst . FIN
   22 suite_liste_inst: suite_liste_inst . instruction POINT_VIRGULE

    IDF       shift, and go to state 17
    FIN       shift, and go to state 59
    RETOURNE  shift, and go to state 18
    SI        shift, and go to state 19
    TANT_QUE  shift, and go to state 20
    VIDE      shift, and go to state 21
    LIRE      shift, and go to state 22
    ECRIRE    shift, and go to state 23

    instruction  go to state 60
    appel        go to state 26
    condition    go to state 27
    tant_que     go to state 28
    affectation  go to state 29
    variable     go to state 30
    lecture      go to state 31
    ecriture     go to state 32
    tableau      go to state 33


State 25

   21 suite_liste_inst: instruction . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 61


State 26

   26 instruction: appel .

    $default  reduce using rule 26 (instruction)


State 27

   24 instruction: condition .

    $default  reduce using rule 24 (instruction)


State 28

   25 instruction: tant_que .

    $default  reduce using rule 25 (instruction)


State 29

   23 instruction: affectation .

    $default  reduce using rule 23 (instruction)


State 30

   55 affectation: variable . OPAFF expression_arithmetique
   87 variable: variable . POINT tableau
   88         | variable . POINT IDF

    POINT  shift, and go to state 62
    OPAFF  shift, and go to state 63


State 31

   29 instruction: lecture .

    $default  reduce using rule 29 (instruction)


State 32

   30 instruction: ecriture .

    $default  reduce using rule 30 (instruction)


State 33

   86 variable: tableau .

    $default  reduce using rule 86 (variable)


State 34

   10 declaration_type: TYPE IDF . DEUX_POINTS suite_declaration_type

    DEUX_POINTS  shift, and go to state 64


State 35

   17 declaration_variable: VARIABLE IDF . DEUX_POINTS nom_type

    DEUX_POINTS  shift, and go to state 65


State 36

   18 declaration_procedure: PROCEDURE IDF . liste_parametres corps

    PARENTHESE_OUVRANTE  shift, and go to state 66

    $default  reduce using rule 41 (liste_parametres)

    liste_parametres  go to state 67


State 37

   19 declaration_fonction: FONCTION IDF . liste_parametres RETOURNE type_simple corps

    PARENTHESE_OUVRANTE  shift, and go to state 66

    $default  reduce using rule 41 (liste_parametres)

    liste_parametres  go to state 68


State 38

    5 liste_declarations: liste_declarations declaration . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 69


State 39

    2 corps: liste_declarations liste_instructions .

    $default  reduce using rule 2 (corps)


State 40

    4 liste_declarations: declaration POINT_VIRGULE .

    $default  reduce using rule 4 (liste_declarations)


State 41

   49 liste_arguments: PARENTHESE_OUVRANTE . liste_args PARENTHESE_FERMANTE

    ENTIER               shift, and go to state 48
    REEL                 shift, and go to state 49
    BOOLEEN              shift, and go to state 50
    CARACTERE            shift, and go to state 51
    CHAINE               shift, and go to state 52
    IDF                  shift, and go to state 70
    CSTE_ENTIERE         shift, and go to state 71
    PARENTHESE_OUVRANTE  shift, and go to state 72

    nom_type                  go to state 54
    type_simple               go to state 55
    liste_args                go to state 73
    un_arg                    go to state 74
    variable                  go to state 75
    expression                go to state 76
    expression_arithmetique   go to state 77
    expression_arithmetique2  go to state 78
    expression_arithmetique3  go to state 79
    expression_booleenne      go to state 80
    tableau                   go to state 33


State 42

   58 suite_crochet: CROCHET_OUVRANT . expression_arithmetique CROCHET_FERMANT
   59              | CROCHET_OUVRANT . expression_arithmetique CROCHET_FERMANT suite_crochet
   89 tableau: IDF CROCHET_OUVRANT . expression_arithmetique CROCHET_FERMANT

    IDF                  shift, and go to state 81
    CSTE_ENTIERE         shift, and go to state 71
    PARENTHESE_OUVRANTE  shift, and go to state 72

    variable                  go to state 75
    expression_arithmetique   go to state 82
    expression_arithmetique2  go to state 78
    expression_arithmetique3  go to state 79
    tableau                   go to state 33


State 43

   47 appel: IDF liste_arguments .

    $default  reduce using rule 47 (appel)


State 44

   57 variable: IDF suite_crochet .

    $default  reduce using rule 57 (variable)


State 45

   46 resultat_retourne: PARENTHESE_OUVRANTE . expression PARENTHESE_FERMANTE

    ENTIER               shift, and go to state 48
    REEL                 shift, and go to state 49
    BOOLEEN              shift, and go to state 50
    CARACTERE            shift, and go to state 51
    CHAINE               shift, and go to state 52
    IDF                  shift, and go to state 70
    CSTE_ENTIERE         shift, and go to state 71
    PARENTHESE_OUVRANTE  shift, and go to state 72

    nom_type                  go to state 54
    type_simple               go to state 55
    variable                  go to state 75
    expression                go to state 83
    expression_arithmetique   go to state 77
    expression_arithmetique2  go to state 78
    expression_arithmetique3  go to state 79
    expression_booleenne      go to state 80
    tableau                   go to state 33


State 46

   28 instruction: RETOURNE resultat_retourne .

    $default  reduce using rule 28 (instruction)


State 47

   53 condition: SI PARENTHESE_OUVRANTE . expression_booleenne PARENTHESE_FERMANTE ALORS liste_instructions

    ENTIER     shift, and go to state 48
    REEL       shift, and go to state 49
    BOOLEEN    shift, and go to state 50
    CARACTERE  shift, and go to state 51
    CHAINE     shift, and go to state 52
    IDF        shift, and go to state 53

    nom_type              go to state 54
    type_simple           go to state 55
    expression_booleenne  go to state 84


State 48

   36 type_simple: ENTIER .

    $default  reduce using rule 36 (type_simple)


State 49

   37 type_simple: REEL .

    $default  reduce using rule 37 (type_simple)


State 50

   38 type_simple: BOOLEEN .

    $default  reduce using rule 38 (type_simple)


State 51

   39 type_simple: CARACTERE .

    $default  reduce using rule 39 (type_simple)


State 52

   40 type_simple: CHAINE . CROCHET_OUVRANT CSTE_ENTIERE CROCHET_FERMANT

    CROCHET_OUVRANT  shift, and go to state 85


State 53

   35 nom_type: IDF .

    $default  reduce using rule 35 (nom_type)


State 54

   71 expression_booleenne: nom_type . opbool nom_type

    INF    shift, and go to state 86
    INFE   shift, and go to state 87
    SUPE   shift, and go to state 88
    SUP    shift, and go to state 89
    DIFF   shift, and go to state 90
    EGALE  shift, and go to state 91

    opbool  go to state 92


State 55

   34 nom_type: type_simple .

    $default  reduce using rule 34 (nom_type)


State 56

   54 tant_que: TANT_QUE expression_booleenne . FAIRE liste_instructions
   72 expression_booleenne: expression_booleenne . AND expression_booleenne
   73                     | expression_booleenne . OR expression_booleenne

    AND    shift, and go to state 93
    OR     shift, and go to state 94
    FAIRE  shift, and go to state 95


State 57

   80 lecture: LIRE PARENTHESE_OUVRANTE . liste_variables PARENTHESE_FERMANTE

    IDF  shift, and go to state 81

    variable         go to state 96
    liste_variables  go to state 97
    tableau          go to state 33


State 58

   81 ecriture: ECRIRE PARENTHESE_OUVRANTE . format suite_ecriture PARENTHESE_FERMANTE

    $default  reduce using rule 84 (format)

    format  go to state 98


State 59

   20 liste_instructions: DEBUT suite_liste_inst FIN .

    $default  reduce using rule 20 (liste_instructions)


State 60

   22 suite_liste_inst: suite_liste_inst instruction . POINT_VIRGULE

    POINT_VIRGULE  shift, and go to state 99


State 61

   21 suite_liste_inst: instruction POINT_VIRGULE .

    $default  reduce using rule 21 (suite_liste_inst)


State 62

   87 variable: variable POINT . tableau
   88         | variable POINT . IDF

    IDF  shift, and go to state 100

    tableau  go to state 101


State 63

   55 affectation: variable OPAFF . expression_arithmetique

    IDF                  shift, and go to state 81
    CSTE_ENTIERE         shift, and go to state 71
    PARENTHESE_OUVRANTE  shift, and go to state 72

    variable                  go to state 75
    expression_arithmetique   go to state 102
    expression_arithmetique2  go to state 78
    expression_arithmetique3  go to state 79
    tableau                   go to state 33


State 64

   10 declaration_type: TYPE IDF DEUX_POINTS . suite_declaration_type

    STRUCT   shift, and go to state 103
    TABLEAU  shift, and go to state 104

    suite_declaration_type  go to state 105


State 65

   17 declaration_variable: VARIABLE IDF DEUX_POINTS . nom_type

    ENTIER     shift, and go to state 48
    REEL       shift, and go to state 49
    BOOLEEN    shift, and go to state 50
    CARACTERE  shift, and go to state 51
    CHAINE     shift, and go to state 52
    IDF        shift, and go to state 53

    nom_type     go to state 106
    type_simple  go to state 55


State 66

   42 liste_parametres: PARENTHESE_OUVRANTE . liste_param PARENTHESE_FERMANTE

    IDF  shift, and go to state 107

    liste_param  go to state 108
    un_param     go to state 109


State 67

   18 declaration_procedure: PROCEDURE IDF liste_parametres . corps

    DEBUT      shift, and go to state 3
    TYPE       shift, and go to state 4
    VARIABLE   shift, and go to state 5
    PROCEDURE  shift, and go to state 6
    FONCTION   shift, and go to state 7

    corps                  go to state 110
    liste_declarations     go to state 9
    declaration            go to state 10
    declaration_type       go to state 11
    declaration_variable   go to state 12
    declaration_procedure  go to state 13
    declaration_fonction   go to state 14
    liste_instructions     go to state 15


State 68

   19 declaration_fonction: FONCTION IDF liste_parametres . RETOURNE type_simple corps

    RETOURNE  shift, and go to state 111


State 69

    5 liste_declarations: liste_declarations declaration POINT_VIRGULE .

    $default  reduce using rule 5 (liste_declarations)


State 70

   35 nom_type: IDF .
   56 variable: IDF .
   57         | IDF . suite_crochet
   85         | IDF .
   89 tableau: IDF . CROCHET_OUVRANT expression_arithmetique CROCHET_FERMANT

    CROCHET_OUVRANT  shift, and go to state 42

    INF                  reduce using rule 35 (nom_type)
    INFE                 reduce using rule 35 (nom_type)
    SUPE                 reduce using rule 35 (nom_type)
    SUP                  reduce using rule 35 (nom_type)
    DIFF                 reduce using rule 35 (nom_type)
    EGALE                reduce using rule 35 (nom_type)
    POINT_POINT          reduce using rule 56 (variable)
    POINT_POINT          [reduce using rule 85 (variable)]
    VIRGULE              reduce using rule 56 (variable)
    VIRGULE              [reduce using rule 85 (variable)]
    POINT                reduce using rule 56 (variable)
    POINT                [reduce using rule 85 (variable)]
    PARENTHESE_FERMANTE  reduce using rule 56 (variable)
    PARENTHESE_FERMANTE  [reduce using rule 85 (variable)]
    CROCHET_FERMANT      reduce using rule 56 (variable)
    CROCHET_FERMANT      [reduce using rule 85 (variable)]
    PLUS                 reduce using rule 56 (variable)
    PLUS                 [reduce using rule 85 (variable)]
    MOINS                reduce using rule 56 (variable)
    MOINS                [reduce using rule 85 (variable)]
    MULT                 reduce using rule 56 (variable)
    MULT                 [reduce using rule 85 (variable)]
    DIV                  reduce using rule 56 (variable)
    DIV                  [reduce using rule 85 (variable)]
    $default             reduce using rule 56 (variable)

    suite_crochet  go to state 44


State 71

   69 expression_arithmetique3: CSTE_ENTIERE .

    $default  reduce using rule 69 (expression_arithmetique3)


State 72

   68 expression_arithmetique3: PARENTHESE_OUVRANTE . expression_arithmetique PARENTHESE_FERMANTE

    IDF                  shift, and go to state 81
    CSTE_ENTIERE         shift, and go to state 71
    PARENTHESE_OUVRANTE  shift, and go to state 72

    variable                  go to state 75
    expression_arithmetique   go to state 112
    expression_arithmetique2  go to state 78
    expression_arithmetique3  go to state 79
    tableau                   go to state 33


State 73

   49 liste_arguments: PARENTHESE_OUVRANTE liste_args . PARENTHESE_FERMANTE
   51 liste_args: liste_args . VIRGULE un_arg

    VIRGULE              shift, and go to state 113
    PARENTHESE_FERMANTE  shift, and go to state 114


State 74

   50 liste_args: un_arg .

    $default  reduce using rule 50 (liste_args)


State 75

   70 expression_arithmetique3: variable .
   87 variable: variable . POINT tableau
   88         | variable . POINT IDF

    POINT  shift, and go to state 62

    $default  reduce using rule 70 (expression_arithmetique3)


State 76

   52 un_arg: expression .

    $default  reduce using rule 52 (un_arg)


State 77

   60 expression: expression_arithmetique .
   62 expression_arithmetique: expression_arithmetique . PLUS expression_arithmetique2
   63                        | expression_arithmetique . MOINS expression_arithmetique2

    PLUS   shift, and go to state 115
    MOINS  shift, and go to state 116

    $default  reduce using rule 60 (expression)


State 78

   64 expression_arithmetique: expression_arithmetique2 .
   65 expression_arithmetique2: expression_arithmetique2 . MULT expression_arithmetique3
   66                         | expression_arithmetique2 . DIV expression_arithmetique3

    MULT  shift, and go to state 117
    DIV   shift, and go to state 118

    $default  reduce using rule 64 (expression_arithmetique)


State 79

   67 expression_arithmetique2: expression_arithmetique3 .

    $default  reduce using rule 67 (expression_arithmetique2)


State 80

   61 expression: expression_booleenne .
   72 expression_booleenne: expression_booleenne . AND expression_booleenne
   73                     | expression_booleenne . OR expression_booleenne

    AND  shift, and go to state 93
    OR   shift, and go to state 94

    $default  reduce using rule 61 (expression)


State 81

   56 variable: IDF .
   57         | IDF . suite_crochet
   85         | IDF .
   89 tableau: IDF . CROCHET_OUVRANT expression_arithmetique CROCHET_FERMANT

    CROCHET_OUVRANT  shift, and go to state 42
